Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-md-9">
                 <div id="about">
                     <h2 class="section-title">Sobre mí</h2>
-                    <p class="about-text">"Soy ingeniero en sistemas computacionales con una sólida especialización en
+                    <p class="about-text">"Ingeniero en sistemas computacionales con una sólida especialización en
                         desarrollo backend. Tengo experiencia en la creación de soluciones robustas y escalables,
                         destacándome en el diseño y la gestión de bases de datos, así como en la implementación de
                         servicios y API. Mi enfoque se centra en la eficiencia y la optimización del rendimiento del
