--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col-md-3">
                 <img src="./assets/img/profile/4.png" alt="Foto de Perfil" class="profile-pic">
                 <h1 class="name mt-2">Luis Enrique</h1>
-                <p class="title">Programador Backend</p>
+                <p class="title">Ingeniero de software</p>
                 <p>Construyo experiencias digitales accesibles, atractivas y de alta calidad.</p>
                 <ul class="navigation">
                     <li><a href="#about" class="active">Sobre mí</a></li>
