--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
             <div class="col-md-9">
                 <div id="about">
                     <h2 class="section-title">Sobre mí</h2>
-                    <p class="about-text">"Ingeniero en sistemas computacionales con una sólida especialización en
-                        desarrollo backend. Tengo experiencia en la creación de soluciones robustas y escalables,
-                        destacándome en el diseño y la gestión de bases de datos, así como en la implementación de
-                        servicios y API. Mi enfoque se centra en la eficiencia y la optimización del rendimiento del
-                        sistema, utilizando tecnologías modernas y prácticas de desarrollo ágil. Soy apasionado por
-                        resolver problemas complejos y mejorar la funcionalidad y seguridad de las aplicaciones."
+                    <p class="about-text">"Ingeniero en Sistemas Computacionales con especialización en desarrollo backend. Cuento con experiencia en la creación de soluciones robustas y escalables, destacándome en el diseño y gestión de bases de datos, así como en la implementación de servicios y APIs. Mi enfoque está en la eficiencia y optimización del rendimiento del sistema, utilizando tecnologías modernas y prácticas de desarrollo ágil. Soy apasionado por resolver problemas complejos y mejorar la funcionalidad y seguridad de las aplicaciones."
                     </p>
                 </div>
                 <div id="experience">
