Eliminar comentarios y actualizar la fecha en el blog: se comentaron imágenes y se modificó la fecha de publicación en index.html, además de desactivar la función de mostrar mensaje de protección en main.js.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <img src="./assets/img/profile/4.png" alt="EnriqueXL" class="nav-profile-pic">
+                <!-- <img src="./assets/img/profile/4.png" alt="EnriqueXL" class="nav-profile-pic"> -->
                 EnriqueXL
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -73,7 +73,7 @@
                                 <img src="assets/img/profile-picture/profile.jpeg" alt="Enrique Hernández" class="hero-image protected-image" draggable="false" onerror="this.src='assets/img/profile/1.png'">
                                 <div class="image-overlay">
                                     <i class="fas fa-shield-alt"></i>
-                                    <span>Imagen Protegida</span>
+                                    <!-- <span>Imagen Protegida</span> -->
                                 </div>
                             </div>
                             <h1 class="hero-title">¡Hola! Soy Enrique</h1>
@@ -126,7 +126,7 @@
                                 controladores limpios y arquitectura escalable. Evitando lógica de negocio en controladores.
                             </p>
                             <div class="blog-card-meta">
-                                <span class="blog-date">15 Mar 2024</span>
+                                <span class="blog-date">12 Ago 2025</span>
                                 <span class="blog-read-time">8 min lectura</span>
                             </div>
                             <div class="blog-tags">
