--- a/blog-sql-optimization-ag-grid.html
+++ b/blog-sql-optimization-ag-grid.html
@@ -433,9 +433,9 @@ document.addEventListener('DOMContentLoaded', () => {
                         <div class="blog-post-footer">
                             <div class="share-buttons">
                                 <h4>Compartir este artículo:</h4>
-                                <a href="#" class="share-btn twitter"><i class="fab fa-twitter"></i> Twitter</a>
-                                <a href="#" class="share-btn linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                                <a href="#" class="share-btn facebook"><i class="fab fa-facebook"></i> Facebook</a>
+                                <button id="shareWhatsApp" class="share-btn whatsapp">
+                                    <i class="fab fa-whatsapp"></i> Compartir link por WhatsApp
+                                </button>
                             </div>
                         </div>
                     </div>
